  Added PREFIX variable to Makefile to better control where manual page and
  insserv executable are stored. Defaults to /usr.
  This effectively moves insserv executable from /sbin to /usr/sbin.
- Make sure we define "extension" for older versions of GCC (5 and under).
  Make systemd/dbus support optional in Makefile using WANT_SYSTEMD
  flag.
  - Patches provided by Petr Ovtchenkov and Dmitry Bogatov.
  

July 2019 (1.21.0) - jsmith@resonatingmedia.com

- Fixed typo in insserv.8 manual page.
- Make it clear that when --verbose (-v) flag is used,
  status information is printed to stderr.
- Added silent (-q) flag which blocks warning messages
  to stderr. In this mode insserv only prints fatal
  error messages.
- Fixed typo when assigning directory path when -i is used.
  Updated testsuite to match fixed directory path when -i is used.

June 2019 (1.20.0) - jsmith@resonatingmedia.com

- Update insserv manual page to refer to startpar(1)
  instead of startpar(8).
- The insserv program now warns when a script has the
  same runlevel specified in both the Default-Start
  and Default-Stop fields of its LSB header.
  Should close Debian bug #538304.
- Added tests/run-testsuite to Makefile's "check" target
  for Debian bug #926547.
- Fixed minor typos in output text and in man page.
- Added -i flag for insserv which allows user to specify
  a specific directory for the Makefile-style depdnency files.
- Fixed run-testsuite script to use new syntax/location
  of Makefile-style dependency files.
- When a scripted test fails, the test script now stops without cleaning up
  to make sure we can look at the data that insserv provided.
- Temporary script data is now cleaned up using "make distclean".
- Fixed run-testsuite to fix backward Required-Stop logic test.
- When an initscript contains a "$service" dependency which
  cannot be resolved (ie $service does not expand or does not exist)
  insserv will display a warning. The initscript is still added.