@@ -12,7 +12,7 @@ INSCONF  =	/etc/insserv.conf
 DEBUG	 =	
 #ISSUSE	 =	-DSUSE
 DESTDIR	 =
-VERSION	 =	1.21.0
+VERSION	 =	1.22.0
 TARBALL  =	$(PACKAGE)-$(VERSION).tar.xz
 DATE	 =	$(shell date +'%d%b%y' | tr '[:lower:]' '[:upper:]')
 PREFIX   ?=	/usr
